informações gerais adicionadas ao dashboard aluno

--- a/src/main/resources/templates/Aluno/ListAluno.html
+++ b/src/main/resources/templates/Aluno/ListAluno.html
@@ -9,7 +9,7 @@
         margin-bottom: 10px;
     }
     
-
+    
     .dataTables_length {
         margin-left: 10px;
     }
@@ -63,7 +63,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="alunos:${alunos}" th:if="${alunos.ultimaAvaliacao != null and alunos.ativo != false}">
+                                        <tr th:each="alunos:${alunos}" th:if="${alunos.ultimaAvaliacao != null and alunos.ativo == true}">
                                             <td cclass="column1"><span th:text="${alunos.nome}"> </span></td>
                                             <td class="column2"><span th:text="${alunos.dataNascimento}"> </span></td>
                                             <td th:switch="${alunos.sexo}">
