--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -57,7 +57,7 @@
                                                 <div class="col mr-2">
                                                     <div
                                                         class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                        Data de Nascimento</div>
+                                                        Alunos Ativdado</div>
                                                     <div class="h5 mb-0 font-weight-bold text-gray-800"><span></span>
                                                     </div>
                                                 </div>
