Inserção da avaliação

--- a/src/main/resources/templates/Aluno/ListAluno.html
+++ b/src/main/resources/templates/Aluno/ListAluno.html
@@ -17,6 +17,12 @@
     .dataTables_info {
         margin-left: 10px;
     }
+
+    #dataTable2_filter label input,
+    #dataTable_filter label input {
+        border: 1px solid rgba(0, 0, 0, .125) !important;
+        border-radius: .25rem;
+    }
 </style>
 
 <body id="page-top">
