--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -39,7 +39,7 @@
     }
 
     #dataTable_filter label input {
-        border: 1px solid rgba(0, 0, 0, .125);
+        border: 1px solid rgba(0, 0, 0, .125) !important;
         border-radius: .25rem;
     }
 </style>
