--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -3,6 +3,12 @@
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head th:replace="Fragments/header :: header"></head>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/drilldown.js"></script>
 
 <body>
     <div id="wrapper">
@@ -30,12 +36,12 @@
                                                     <div class="row no-gutters align-items-center">
                                                         <div class="col-auto">
                                                             <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
-                                                                <span th:text="${dados.porcentagemNaoAvaliados}"></span>
+                                                                <!-- <span th:text="${dados.porcentagemNaoAvaliados}"></span> -->
                                                             </div>
                                                         </div>
                                                         <div class="col">
                                                             <div class="progress progress-sm mr-2">
-                                                                <div class="progress-bar bg-info" role="progressbar"                                                                    
+                                                                <div class="progress-bar bg-info" role="progressbar"
                                                                     aria-valuemin="0" aria-valuemax="100"></div>
                                                             </div>
                                                         </div>
@@ -113,30 +119,47 @@
                             </div>
 
                         </th:block>
+
+                        <div class="row">
+                            <div class="col">
+                                <div class="card shadow mb-4 col">
+
+                                    <div class="container-fluid">
+                                        <div class="card-header">
+                                            <center>MÉDIA DE PORCENTAGEM DE GORDURA POR GÊNERO</center>
+                                        </div>
+                                        <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
     </div>
 </body>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-<script th:src="@{/js/Graficos/HomeGraficos.js}"></script>
 <footer th:replace="Fragments/footer :: footer"></footer>
-
 <script th:inline="javascript">
     /*<![CDATA[*/
     var porcentagem = [[${ dados }]];
+    var media = [[${ media }]];
     /*]]>*/
 </script>
 <script>
-
+    console.log(media.data)    
+    /*
     $(".progress-bar").css("width", porcentagem.porcentagemNaoAvaliados)
     $('#myModal').on('shown.bs.modal', function () {
         $('#myInput').trigger('focus')
     })
+    */
 </script>
+<script th:src="@{/js/Graficos/HomeGraficos.js}"></script>
 
 </html>
